--- a/week 2/week 2.vcxproj
+++ b/week 2/week 2.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ascii.c" />
     <ClCompile Include="hello.c" />
+    <ClCompile Include="nums.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
